improve "export signed application package" wizard, move related action to "build | generated signed apk"

--- a/plugins/android/resources/messages/AndroidBundle.properties
+++ b/plugins/android/resources/messages/AndroidBundle.properties
@@ -100,6 +100,7 @@ cant.load.avds.error.prefix=Cannot reload AVD list:
 android.logcat.device.label=&Device:
 android.logcat.clear.log.button.title=Clear log
 android.export.signed.package.action.text=Export Signed Application Package
+android.generate.signed.apk.action.text=Generate Signed APK...
 android.unable.to.get.output.directory.error=Unable to get the output folder of the project
 android.file.not.exist.error=File {0} doesn't exist
 android.project.contains.errors.error=The project contains errors
@@ -110,6 +111,8 @@ android.password.label=Pa&ssword:
 android.confirm.password.label=&Confirm:
 android.export.package.passwords.not.match.error=Passwords do not match
 android.export.package.specify.keystore.location.error=Please specify keystore location
+android.export.package.specify.key.password.error=Please specify password for key
+android.export.package.specify.key.store.password.error=Please specify password for key store
 android.export.package.specify.password.error=Please specify password
 android.export.package.incorrect.password.length=Password must be at least 6 characters
 android.cannot.find.directory.error=Cannot find directory {0}
@@ -136,7 +139,7 @@ android.export.package.destination.akp.label=&Destination APK path:
 android.extract.package.cannot.find.key.error=Cannot find key {0}
 android.extract.package.specify.apk.path.error=Please specify destination APK path
 android.extract.package.task.title=Generating APK file
-android.export.package.wizard.title=Export Application Package Wizard
+android.export.package.wizard.title=Generate Signed APK Wizard
 android.export.package.success.message=File {0} was successfully created
 avd.not.found.error=AVD {0} not found
 android.no.facet.error=No Android facet found in the module
