always run eclipse compiler single-threaded

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -159,7 +159,7 @@ compiler.process.32bit.vm.on.mac=true
 # suppress inspection "UnusedProperty"
 compiler.process.32bit.vm.on.mac.description=Force -d32 VM option on Mac (recommended for faster startup and lower memory footprint).
 
-compiler.process.vm.options=-Xss2048k -Djdt.compiler.useSingleThread=true
+compiler.process.vm.options=-Xss2048k -Dcompile.parallel=false -Dcompile.parallel.max.threads=4
 # suppress inspection "UnusedProperty"
 compiler.process.vm.options.description=Additional options for the build process' VM.
 
