--- a/xml/impl/resources/intentionDescriptions/AddXsiSchemaLocationForExtResourceAction/after.xml.template
+++ b/xml/impl/resources/intentionDescriptions/AddXsiSchemaLocationForExtResourceAction/after.xml.template
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<<spot>xs</spot>:schema targetNamespace="http://mySchema"
-        xmlns:<spot>xs</spot>="http://www.w3.org/2001/XMLSchema"
-        xmlns:my="http://mySchema">
-
-    <<spot>xs</spot>:element name="myElement" type="my:TYPE"/>
-    <<spot>xs</spot>:simpleType name="TYPE" id="TYPE">
-        <<spot>xs</spot>:restriction base="<spot>xs</spot>:integer">
-            <<spot>xs</spot>:minInclusive value="0" id="nonNegativeInteger.minInclusive"/>
-        </<spot>xs</spot>:restriction>
-    </<spot>xs</spot>:simpleType>
-</<spot>xs</spot>:schema>
+<schema xmlns="http://www.w3.org/2001/XMLSchema"
+        <spot>xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://www.w3.org/2001/XMLSchema http://www.w3.org/2001/XMLSchema.xsd"</spot>>
+          
+</schema>
