--- a/plugins/IntentionPowerPak/src/intentionDescriptions/WrapVarargArgumentsWithExplicitArrayIntention/before.java.template
+++ b/plugins/IntentionPowerPak/src/intentionDescriptions/WrapVarargArgumentsWithExplicitArrayIntention/before.java.template
@@ -1,5 +1,5 @@
 public class X {
-  List f(<spot>int x, int y</spot>) {
-    return java.util.Arrays.asList(x, y);
+  List f(int x, int y) {
+    return java.util.Arrays.asList(<spot>x, y</spot>);
   }
 }
