--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1958,7 +1958,10 @@ string.builder.replaceable.by.string.quickfix=Replace 'StringBuilder' with 'Stri
 string.buffer.replaceable.by.string.quickfix=Replace 'StringBuffer' with 'String'
 add.0.to.ignore.if.annotated.by.list.quickfix=Add ''{0}'' to ''Ignore if annotated by'' list
 non.final.field.in.enum.display.name=Non-'final' field in enum
-non.final.field.in.enum.problem.descriptor=non-''final'' field <code>#ref</code> in enum ''{0}''
+non.final.field.in.enum.problem.descriptor=non-''final'' field <code>#ref</code> in enum ''{0}'' #loc
 externalizable.without.public.no.arg.constructor.display.name=Externalizable class without public no-arg constructor
-externalizable.without.public.no.arg.constructor.problem.descriptor=Externalizable class <code>#ref</code> has no public no-arg constructor
+externalizable.without.public.no.arg.constructor.problem.descriptor=Externalizable class <code>#ref</code> has no public no-arg constructor #loc
 make.constructor.public=Make constructor 'public'
+string.concatenation.missing.whitespace.display.name=String literal concatenation missing whitespace
+string.concatenation.missing.whitespace.problem.descriptor=String literal concatenation missing whitespace #loc
+string.concatenation.missing.whitespace.option=Ignore when not both sides are string literals
