--- a/plugins/rearranger/src/META-INF/plugin.xml
+++ b/plugins/rearranger/src/META-INF/plugin.xml
@@ -20,25 +20,25 @@
             class="com.wrq.rearranger.RearrangerAction"
             text="Rearranger"
             description="Rearrange class and class member declarations according to a user-specified order.">
-      <keyboard-shortcut first-keystroke="control alt shift R" keymap="$default"/>
-      <add-to-group group-id="EditorPopupMenu" anchor="last"/>
-      <add-to-group group-id="EditMenu" anchor="last"/>
+      <!--<keyboard-shortcut first-keystroke="control alt shift R" keymap="$default"/>-->
+      <!--<add-to-group group-id="EditorPopupMenu" anchor="last"/>-->
+      <!--<add-to-group group-id="EditMenu" anchor="last"/>-->
     </action>
     <action id="Rearranger.ProjectTree"
             class="com.wrq.rearranger.ProjectTreeActionHandler"
             text="Rearranger"
             description="Rearrange class and class member declarations according to a user-specified order.">
       <!--            <add-to-group group-id="EditMenu" anchor="last"/>      -->
-      <add-to-group group-id="ProjectViewPopupMenu" anchor="last"/>
+      <!--<add-to-group group-id="ProjectViewPopupMenu" anchor="last"/>-->
     </action>
 
     <action id="Rearranger.RearrangeLive"
             class="com.wrq.rearranger.LiveRearrangerAction"
             text="Live Rearranger"
             description="Permits user to manually rearrange class and class member declarations.">
-      <keyboard-shortcut first-keystroke="ctrl COMMA" keymap="$default"/>
-      <add-to-group group-id="EditorPopupMenu" anchor="last"/>
-      <add-to-group group-id="EditMenu" anchor="last"/>
+      <!--<keyboard-shortcut first-keystroke="ctrl COMMA" keymap="$default"/>-->
+      <!--<add-to-group group-id="EditorPopupMenu" anchor="last"/>-->
+      <!--<add-to-group group-id="EditMenu" anchor="last"/>-->
     </action>
 
   </actions>
