attempt to clarify the description

--- a/resources-en/src/intentionDescriptions/PushConditionInCallAction/after.java.template
+++ b/resources-en/src/intentionDescriptions/PushConditionInCallAction/after.java.template
@@ -1,6 +1,6 @@
 class X {
   void bar(boolean b) {
-    String str = <spot>foo(b ? "true": "false")</spot>;
+    String str = foo(b ? "true": "false");
   }
 
   String foo(String p) {
