IDEA-88947 Merge "Open Project" and "Open File" actions into one

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -227,10 +227,10 @@ action.NewProject.text=_New Project...
 action.NewProject.description=Create a new project
 action.NewModule.text=Add _Module...
 action.NewModule.description=Add new module to the project
-action.OpenProject.text=_Open Project...
+action.OpenProject.text=Open Project...
 action.OpenProject.description=Open an existing project
-action.OpenFile.text=Open Fi_le...
-action.OpenFile.description=Open file in editor
+action.OpenFile.text=_Open...
+action.OpenFile.description=Open a project or a file in editor
 group.reopen.win.text=_Reopen
 group.reopen.mac.text=Open _Recent
 group.$LRU.description=List of recently opened projects
