--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -388,10 +388,9 @@ title.popup.new.element=New
 title.popup.new.element.same.place=New in Current Directory
 command.go.to.next.split=Go to next split
 message.occurrence.N.of.M=Occurrence {0} of {1}
-message.open.file.is.project={0} is an {1} project file.\nWould you like to open this project?
+message.open.file.is.project={0} is a project file.\nWould you like to open this project?
 error.files.of.this.type.cannot.be.opened=Files of this type cannot be opened in {0}
 title.cannot.open.file=Cannot Open File
-title.open.file=Open File
 filter.all.file.types=All file types
 filter.project.files=Project files ({0}) or project directories (.idea)
 action.unpin.tab=Unp_in Tab
