initial windows customization

--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula_windows.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula_windows.properties
@@ -1,1 +1,10 @@
+Button.background=606060
+Button.foreground=ffffff
 
+ComboBox.background=606060
+ComboBox.foreground=ffffff
+
+Tree.line=909090
+Tree.hash=909090
+
+Menu.selectionBackground=526CA4
