switch darcula on

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -251,6 +251,6 @@ file.colors.in.commit.dialog=false
 
 testng.serialized.protocol.enabled=false
 testng.skip.expected.exceptions=true
-dark.laf.available=false
+dark.laf.available=true
 
 actionSystem.force.alt.gr=false
