some darcula fixes

--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula_windows.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula_windows.properties
@@ -6,5 +6,7 @@ ComboBox.foreground=ffffff
 
 Tree.line=909090
 Tree.hash=909090
+Tree.collapsedIcon=AllIcons.Darcula.TreeCollapsedIcon
+Tree.expandedIcon=AllIcons.Darcula.TreeExpandedIcon
 
 Menu.selectionBackground=526CA4
