make white softer

--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula.properties
@@ -4,59 +4,59 @@ MenuItem.acceleratorDelimiter=-
 
 #Trees
 Tree.background=444444
-Tree.foreground=FFFFFF
-Tree.textForeground=FFFFFF
+Tree.foreground=cccccc
+Tree.textForeground=cccccc
 Tree.textBackground=444444
 #Tree.selectionBackground=BEBEBE
 #Tree.selectionForeground=444444
 
 #Lists
 List.background=444444
-List.foreground=FFFFFF
+List.foreground=cccccc
 
 #Tables
 Table.background=444444
-Table.foreground=FFFFFF
+Table.foreground=cccccc
 control=444444
 Panel.background=404040
-Panel.foreground=FFFFFF
+Panel.foreground=cccccc
 Menu.selectionBackground=bebebe
 MenuBar.background=444444
 MenuBar.disabledBackground=444444
 MenuBar.shadow=444444
 Menu.background=444444
 MenuItem.background=444444
-Menu.foreground=FFFFFF
-MenuItem.foreground=ffffff
+Menu.foreground=cccccc
+MenuItem.foreground=cccccc
 TabbedPane.tabInsets=0,4,0,4
-ToggleButton.foreground=ffffff
+ToggleButton.foreground=cccccc
 Separator.background=444444
 Separator.foreground=888888
 
-Label.foreground=ffffff
+Label.foreground=cccccc
 Focus.color=ff0000
 
 TextField.background=444444
-TextField.foreground=ffffff
-TextField.caretForeground=ffffff
+TextField.foreground=cccccc
+TextField.caretForeground=cccccc
 
 TextArea.background=444444
-TextArea.foreground=ffffff
-TextArea.caretForeground=ffffff
+TextArea.foreground=cccccc
+TextArea.caretForeground=cccccc
 
 TextPane.background=444444
-TextPane.foreground=ffffff
-TextPane.caretForeground=ffffff
+TextPane.foreground=cccccc
+TextPane.caretForeground=cccccc
 
 CheckBox.background=444444
-CheckBox.foreground=ffffff
-RadioButton.foreground=ffffff
+CheckBox.foreground=cccccc
+RadioButton.foreground=cccccc
 
 StatusBar.topColor=2c2c2c
 StatusBar.top2Color=2c2c2c
 StatusBar.bottomColor=2c2c2c
 
 
-MenuItem.acceleratorForeground=ffffff
+MenuItem.acceleratorForeground=cccccc
 PopupMenu.background=444444
 PopupMenu.translucentBackground=444444
