--- a/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula_windows.properties
+++ b/platform/platform-impl/src/com/intellij/ide/ui/laf/darcula_windows.properties
@@ -1,8 +1,8 @@
 Button.background=606060
-Button.foreground=ffffff
+Button.foreground=cccccc
 
 ComboBox.background=606060
-ComboBox.foreground=ffffff
+ComboBox.foreground=cccccc
 
 Tree.line=909090
 Tree.hash=909090
