android dependency processor: search for refs to R class instead of usages of each constant field (inside project they may be non-existent or non-up-to date)

--- a/plugins/android/src/META-INF/plugin.xml
+++ b/plugins/android/src/META-INF/plugin.xml
@@ -143,6 +143,7 @@
     <compiler implementation="org.jetbrains.android.compiler.AndroidPngFilesCachingCompiler"/>
     <compiler implementation="org.jetbrains.android.compiler.AndroidResourcesPackagingCompiler"/>
     <compiler implementation="org.jetbrains.android.compiler.AndroidPackagingCompiler"/>
+    <compiler.makeDependencyProcessor implementation="org.jetbrains.android.compiler.AndroidDependencyProcessor"/>
 
     <completion.contributor language="XML" implementationClass="org.jetbrains.android.AndroidCompletionContributor"
                             id="compositieAttributeValues" order="first"/>
