IDEA-89094 Validate names of android resources

--- a/plugins/android/resources/messages/AndroidBundle.properties
+++ b/plugins/android/resources/messages/AndroidBundle.properties
@@ -418,3 +418,6 @@ file.name.not.specified.error=File name is not specified
 root.element.not.specified.error=Root element is not specified
 directory.not.specified.error=Directory is not specified
 android.manifest.merger.not.supported.error=Manifest merging is not supported. Please, reconfigure your manifest files
+invalid.file.resource.name.error=Resource file name must contain only lowercase a-z, 0-9, or _
+invalid.file.resource.name.error1=Invalid resource file name
+invalid.resource.name.error=Invalid resource name ''{0}''
