IDEA-60208 VCS GUI: "Revert" and "Rollback" are used intermixed

--- a/plugins/hg4idea/src/META-INF/plugin.xml
+++ b/plugins/hg4idea/src/META-INF/plugin.xml
@@ -36,7 +36,7 @@
     <group id="hg4idea.file.menu" popup="true" class="org.zmlx.hg4idea.action.HgMercurialMenu">
       <reference ref="CheckinFiles"/>
       <reference ref="ChangesView.AddUnversioned"/>
-      <reference ref="ChangesView.Rollback"/>
+      <reference ref="ChangesView.Revert"/>
       <separator/>
 
       <reference ref="Compare.SameVersion"/>
