IDEA-88179 Allow to switch off completion item selection by typing dot, space etc.

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -200,6 +200,9 @@ projectView.hide.dot.idea=true
 show.live.templates.in.completion=false
 documentation.component.editor.font=false
 
+ide.completion.allow.finishing.by.chars=true
+ide.completion.allow.finishing.by.chars.description=Controls whether typing dot, space, etc. may select the current lookup item
+
 ide.completion.middle.matching=true
 # suppress inspection "UnusedProperty"
 ide.completion.middle.matching.description=Suggest items in completion that contain the entered string somewhere in the middle.
