IDEA-89238 fix text messages: use 'library' instead of 'library project'

--- a/plugins/android/resources/messages/AndroidBundle.properties
+++ b/plugins/android/resources/messages/AndroidBundle.properties
@@ -171,7 +171,7 @@ android.wizard.specify.tested.module.error=Please specify tested module
 android.wizard.tested.module.without.facet.error=Tested module must contain Android facet
 android.wizard.cannot.find.module.parent.dir.error=Cannot find module parent directory: {0}
 android.wizard.invalid.sdk.error=Android SDK is invalid
-android.facet.editor.is.library.checkbox=&Is Library project
+android.facet.editor.is.library.checkbox=Li&brary module
 android.run.sdk.manager.action.text=SDK Manager
 android.run.avd.manager.action.text=AVD Manager
 android.choose.sdk.label=Please choose Android SDK location
@@ -220,7 +220,7 @@ android.keystore.password.label=Pa&ssword:
 android.keystore.confirm.password.label=C&onfirm:
 android.export.package.new.key.alias.label=&Alias:
 android.key.password.label=Pa&ssword:
-android.cannot.run.library.project.error=The module cannot be Android library project
+android.cannot.run.library.project.error=The module cannot be Android library
 android.compilation.error.specify.platform=[{0}] Android SDK is not specified or cannot be parsed
 android.compilation.error.manifest.not.found=[{0}] AndroidManifest.xml file not found. Please, check Android facet settings.
 android.compilation.error.apt.gen.not.specified=AAPT destination directory not specified for module {0}
@@ -389,7 +389,7 @@ android.lint.inspections.use.sparsearray=HashMap can be replaced with SparseArra
 android.lint.inspections.value.of=Should use 'valueOf' instead of 'new'
 android.lint.inspections.multiple.uses.sdk=Multiple <uses-sdk> elements in the manifest
 android.lint.inspections.uses.min.sdk=Minimum SDK and target SDK attributes not defined
-android.lint.inspections.custom.view=Using custom namespace attributes in a library project
+android.lint.inspections.custom.view=Using custom namespace attributes in a library module
 android.lint.inspections.proguard.split.config=Proguard.cfg file contains generic Android rules
 android.lint.inspections.sd.card.path=Hardcoded reference to /sdcard
 android.lint.inspections.world,writable.files=openFileOutput() call passing MODE_WORLD_WRITEABLE
