--- a/platform/platform-resources-en/src/messages/ExecutionBundle.properties
+++ b/platform/platform-resources-en/src/messages/ExecutionBundle.properties
@@ -276,7 +276,7 @@ coverage.tab.title=Code Coverage
 show.swing.inspector=&Enable capturing form snapshots
 show.swing.inspector.disabled=&Enable capturing form snapshots (requires JRE 5.0 or higher)
 before.run.property.make=Make
-run.configuration.store.place.option=&Share configuration
+run.configuration.store.place.option=&Share
 run.configuration.default.type.description=configuration
 
 #GeneralCommandLine
