--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -201,10 +201,8 @@ action.CompareTwoFiles.text=Compare Two _Files
 action.CompareTwoFiles.description=Compare two selected files
 action.CompareFileWithEditor.text=Co_mpare File with Editor
 action.CompareFileWithEditor.description=Compare selected file with editor
-action.ShowQuickDocFromTooltip.text=Full documentation
-action.ShowQuickDocFromTooltip.description=Show full documentation
-action.ShowQuickDocAtPinnedWindowFromTooltip.text=Full documentation in pinned window
-action.ShowQuickDocAtPinnedWindowFromTooltip.description=Show full documentation in pinned window
+action.ShowQuickDocAtPinnedWindowFromTooltip.text=Full documentation in a pinned window
+action.ShowQuickDocAtPinnedWindowFromTooltip.description=Show full documentation in a pinned window
 
 group.LocalHistory.text=Local _History
 action.LocalHistory.ShowHistory.text=Show _History
