--- a/platform/platform-resources-en/src/messages/ExecutionBundle.properties
+++ b/platform/platform-resources-en/src/messages/ExecutionBundle.properties
@@ -252,11 +252,11 @@ remote.configuration.socket.radio=Socket
 remote.configuration.shared.memory.address.label=Shared memory address:
 remote.configuration.port.label=Port:
 remote.configuration.host.label=Host:
-remote.configuration.remote.debugging.allows.you.to.connect.idea.to.a.running.jvm.label=&Remote debugging allows you to connect IDEA to a running JVM started with the following command line arguments
+remote.configuration.remote.debugging.allows.you.to.connect.idea.to.a.running.jvm.label=&Command line arguments for running remote JVM
 standard.runner.description=Run selected configuration
 environment.variables.helper.use.arguments.label=<html><body>Use the following command line arguments for running remote JVM</body></html>
-environment.variables.helper.use.arguments.jdk13.label=<html><body>If the &application runs on JDK 1.3.x or earlier, use following arguments</body></html>
-environment.variables.helper.use.arguments.jdk14.label=<html><body>If the &application runs on JDK 1.4.x, use following arguments</body></html>
+environment.variables.helper.use.arguments.jdk13.label=<html><body>For JDK 1.3.x or earlier</body></html>
+environment.variables.helper.use.arguments.jdk14.label=<html><body>For JDK 1.4.x</body></html>
 select.run.configuration.for.item.action.name=Select ''{0}''
 save.run.configuration.for.item.action.name=Save ''{0}''
 junit.runing.info.status.done.count=Done: {0}
