--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -402,7 +402,7 @@ group.error.highlighting=Error highlighting
 editbox.autoreparse.delay.ms=Autoreparse delay (ms):
 editbox.error.stripe.mark.min.height.pixels=Error stripe mark min height (pixels):
 checkbox.suppress.with.suppresswarnings=Suppress with @SuppressWarnings (for Java 5.0 only)
-checkbox.next.error.action.goes.to.errors.first='Next Error' action goes to errors first
+checkbox.next.error.action.goes.to.errors.first='Next Error' action goes to high priority problems only 
 checkbox.show.import.popup=Show import &popup
 checkbox.indent.use.tab.character=Use tab character
 checkbox.indent.smart.tabs=Smart tabs
