mountain lion notifications support

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -116,6 +116,7 @@ ide.tabbedPane.dragOutMultiplier=1.2
 ide.mac.file.chooser.show.hidden.files=false
 ide.mac.file.chooser.native=true
 ide.mac.message.dialogs.as.sheets=true
+ide.mac.mountain.lion.notifications.enabled=true
 ide.mac.inplaceDialogMnemonicsFix=true
 ide.mac.fix.dialog.showing=false
 ide.mac.hide.cursor.when.typing=true
