--- a/platform/platform-resources-en/src/messages/ExecutionBundle.properties
+++ b/platform/platform-resources-en/src/messages/ExecutionBundle.properties
@@ -159,7 +159,7 @@ terminating.process.progress.title=Terminating ''{0}''
 waiting.for.vm.detach.progress.text=Waiting for process detach
 restart.error.message.title=Restart Error
 rerun.configuration.action.name=Rerun ''{0}''
-rerun.confirmation.message=Are you sure you want to stop ''{0}''
+rerun.confirmation.message=Are you sure you want to stop ''{0}''?
 rerun.confirmation.title=Stop Confirmation
 rerun.confirmation.checkbox=Confirm rerun with process termination
 run.configuration.dump.threads.action.name=Dump Threads
