ability to disable yellow intention icon in completion

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -257,3 +257,4 @@ testng.skip.expected.exceptions=true
 dark.laf.available=true
 
 actionSystem.force.alt.gr=false
+completion.show.intention.icon=true
