IDEA-89287 (option for "if statement with negated condition" to ignore '!= 0')

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1314,7 +1314,8 @@ if.statement.with.too.many.branches.max.option=Maximum number of branches:
 if.statement.with.too.many.branches.problem.descriptor='<code>#ref</code>' has too many branches ({0}) #loc
 negated.conditional.ignore.option=Ignore '!= null' comparisons
 negated.conditional.invert.quickfix=Invert condition
-negated.if.else.ignore.option=Ignore '!= null' comparisons
+negated.if.else.ignore.negated.null.option=Ignore '!= null' comparisons
+negated.if.else.ignore.negated.zero.option=Ignore '!= 0' comparisons
 negated.if.else.invert.quickfix=Invert If Condition
 overly.complex.boolean.expression.max.terms.option=Maximum number of terms:
 pointless.boolean.expression.ignore.option=Ignore named constant in determining pointless expressions
