--- a/platform/platform-resources-en/src/messages/KeyMapBundle.properties
+++ b/platform/platform-resources-en/src/messages/KeyMapBundle.properties
@@ -98,5 +98,5 @@ filter.settings.popup.title=Filter Settings
 filter.enable.second.stroke.checkbox=Enable
 filter.first.stroke.input=First Stroke:
 filter.second.stroke.input=Second Stroke:
-filter.shortcut.action.text=Shortcut Filter
+filter.shortcut.action.text=Find Actions by Shortcut
 disable.mnemonic.in.controls.check.box=Disable mnemonics in controls
