IDEA-89271 (RFE: SynchronizedMethod inspection warn about overridden methods)

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1217,6 +1217,7 @@ object.notify.replace.quickfix=Replace with 'notifyAll()'
 safe.lock.problem.descriptor=''{0}'' should be locked in front of a ''try'' block and unlocked in the corresponding ''finally'' block #loc
 synchronized.method.problem.descriptor=Method ''{0}()'' declared <code>#ref</code> #loc
 synchronized.method.include.option=Include native methods
+synchronized.method.ignore.synchronized.super.option=Ignore overrides synchronized methods
 synchronized.method.move.quickfix=Move synchronization into method
 thread.run.replace.quickfix=Replace with 'start()'
 volatile.field.problem.descriptor=Volatile field <code>#ref</code> of type ''{0}'' #loc
