--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/intentions/GroovyIntentionsBundle.properties
@@ -6,6 +6,7 @@ intention.category.comments=Comments
 intention.category.groovy.style=Groovy-style
 intention.category.control.flow=Control Flow
 intention.category.groovy.declaration=Declaration
+intention.category.groovy.other=Other
 demorgans.law.intention.family.name=DeMorgan's Law
 demorgans.intention.name1=Replace ''\\&\\&'' with ''||''
 demorgans.intention.name2=Replace ''||'' with ''\\&\\&''
@@ -169,3 +170,5 @@ remove.unnecessary.escape.characters.intention.name=Remove unnecessary escape ch
 remove.unnecessary.escape.characters.intention.family.name=Remove unnecessary escape characters
 gr.break.string.on.line.breaks.intention.name=Break string on '\\n'
 gr.break.string.on.line.breaks.intention.family.name=Break string on '\\n'
+gr.create.missing.switch.branches.intention.name=Create missing 'switch' branches
+gr.create.missing.switch.branches.intention.family.name=Create missing 'switch' branches
