IDEA-88531 highlighting for inapplicable types of overridden method and implicit accessors

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -317,3 +317,5 @@ create.inner.class=Create Inner Class {0}
 annotation.field.can.only.be.used.within.a.script.body=Annotation @Field can only be used within a script body
 annotation.field.can.only.be.used.within.a.script=Annotation @Field can only be used within a script
 public.modifier.is.not.allowed.in.interfaces='public' modifier is not allowed in interfaces
+return.type.is.incompatible=The return type of {0} in {1} is incompatible with {2} in {3}
+anonymous.class.derived.from=anonymous class derived from
