search with google editor and console action

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -277,6 +277,8 @@ action.$Cut.text=Cu_t
 action.$Cut.description=Cut to clipboard
 action.$Copy.text=_Copy
 action.$Copy.description=Copy to clipboard
+action.$SearchWeb.text=_Search with Google
+action.$SearchWeb.description=Search selection with Google
 action.CopyPaths.text=C_opy Paths
 action.CopyPaths.description=Copy paths corresponding to selected files or directories to clipboard
 action.CopyReference.text=Cop_y Reference
