errors in annotation methods

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -319,3 +319,4 @@ annotation.field.can.only.be.used.within.a.script=Annotation @Field can only be 
 public.modifier.is.not.allowed.in.interfaces='public' modifier is not allowed in interfaces
 return.type.is.incompatible=The return type of {0} in {1} is incompatible with {2} in {3}
 anonymous.class.derived.from=anonymous class derived from
+throws.clause.is.not.allowed.in.at.interface='throws' clause is not allowed in @interface members
