Use caching Win FS for filling up persistence; cleanup

--- a/platform/platform-resources-en/src/misc/registry.properties
+++ b/platform/platform-resources-en/src/misc/registry.properties
@@ -136,8 +136,6 @@ debugger.breakpoint.message.full.trace.description='Log message to console' brea
   for the thread that hit the breakpoint.
 debugger.breakpoint.use.breakpoints.popup=true
 
-filesystem.useNative=true
-
 analyze.exceptions.on.the.fly=false
 # suppress inspection "UnusedProperty"
 analyze.exceptions.on.the.fly.description=Automatically analyze clipboard on frame activation,\
@@ -202,6 +200,7 @@ show.live.templates.in.completion=false
 documentation.component.editor.font=false
 
 ide.completion.allow.finishing.by.chars=true
+# suppress inspection "UnusedProperty"
 ide.completion.allow.finishing.by.chars.description=Controls whether typing dot, space, etc. may select the current lookup item
 
 ide.completion.middle.matching=true
