type checking in annotations

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -320,3 +320,6 @@ public.modifier.is.not.allowed.in.interfaces='public' modifier is not allowed in
 return.type.is.incompatible=The return type of {0} in {1} is incompatible with {2} in {3}
 anonymous.class.derived.from=anonymous class derived from
 throws.clause.is.not.allowed.in.at.interface='throws' clause is not allowed in @interface members
+at.interface.0.does.not.contain.attribute=@interface ''{0}'' does not contain attribute ''{1}''
+duplicate.attribute=Duplicate attribute
+missed.attributes=Missed attributes: {0}
