check of attribute's declared  types

--- a/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
+++ b/plugins/groovy/src/org/jetbrains/plugins/groovy/GroovyBundle.properties
@@ -166,8 +166,8 @@ def.visibility.presentation=def
 ########################################################################################################################
 class.already.exists=Class ''{0}'' already exists
 
-annotation.definition.qualified.name.expected=annotation definition qualified name expected
-type.expected=type expected
+annotation.definition.qualified.name.expected=Annotation definition qualified name expected
+type.expected=Type expected
 type.parameter.expected=Type parameter expected
 type.argument.expected=Type argument expected
 
@@ -322,4 +322,6 @@ anonymous.class.derived.from=anonymous class derived from
 throws.clause.is.not.allowed.in.at.interface='throws' clause is not allowed in @interface members
 at.interface.0.does.not.contain.attribute=@interface ''{0}'' does not contain attribute ''{1}''
 duplicate.attribute=Duplicate attribute
-missed.attributes=Missed attributes: {0}
+missed.attributes=Missed attributes\: {0}
+unexpected.attribute.type.0=Unexpected attribute type\: ''{0}''
+annotation.attribute.should.have.return.type.declaration=Annotation attribute should have return type declaration
