IDEA-70314 android extract style refactoring

--- a/plugins/android/resources/messages/AndroidBundle.properties
+++ b/plugins/android/resources/messages/AndroidBundle.properties
@@ -421,3 +421,4 @@ android.manifest.merger.not.supported.error=Manifest merging is not supported. P
 invalid.file.resource.name.error=Resource file name must contain only lowercase a-z, 0-9, or _
 invalid.file.resource.name.error1=Invalid resource file name
 invalid.resource.name.error=Invalid resource name ''{0}''
+android.extract.style.title=Extract Android Style
