XDebugger: compare value with clipboard action (IDEA-89243), finish 'Load value' progress if evaluation failed

--- a/platform/platform-resources-en/src/messages/DiffBundle.properties
+++ b/platform/platform-resources-en/src/messages/DiffBundle.properties
@@ -78,3 +78,5 @@ diff.type.changed.name=Changed
 diff.type.deleted.name=Deleted
 diff.type.conflict.name=Conflict
 diff.type.none.name=None
+diff.content.selected.value=Selected Value
+diff.clipboard.vs.value.dialog.title=Clipboard vs Selected Value
