--- a/platform/platform-resources-en/src/messages/XDebuggerBundle.properties
+++ b/platform/platform-resources-en/src/messages/XDebuggerBundle.properties
@@ -94,3 +94,5 @@ debugger.variables.not.available=Variables are not available
 debugger.no.watches=No watches
 debugger.no.breakpoints=No breakpoints
 debugger.no.results=Type an expression and press 'Enter'
+load.value.task.error=Cannot load value\: {0}
+load.value.task.text=Loading value
