--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -857,6 +857,8 @@ action.XDebugger.SetValue.text=Set Value...
 action.XDebugger.SetValue.description=Modify value of selected node
 action.XDebugger.CopyValue.text=Copy Value
 action.XDebugger.CopyValue.description=Copy value of selected node to clipboard
+action.XDebugger.CompareValueWithClipboard.text=Compare Value with Clipboard
+action.XDebugger.CompareValueWithClipboard.description=Compare value of selected node with clipboard text
 action.XDebugger.CopyName.text=Copy Name
 action.XDebugger.CopyName.description=Copy name of selected node to clipboard
 action.XDebugger.JumpToSource.text=Jump To Source
@@ -879,6 +881,7 @@ action.Debugger.CopyValue.text=Copy Value
 action.Debugger.ViewText.text=View Text
 action.Debugger.ViewText.description=View text value of selected node in a separate pane
 action.Debugger.CompareValueWithClipboard.text=Compare Value with Clipboard
+action.Debugger.CompareValueWithClipboard.description=Compare value of selected node with clipboard text
 action.Debugger.CustomizeContextView.text=Customize Data Views...
 action.Debugger.CustomizeThreadsView.text=Customize Threads View...
 action.Debugger.NewWatch.text=New Watch...
