XML Actions: menu labels casing fixed

--- a/platform/platform-resources-en/src/messages/ActionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/ActionsBundle.properties
@@ -693,8 +693,8 @@ action.StartStopMacroRecording.description=Start/Stop recording of a new macro
 action.EditMacros.text=_Edit Macros
 action.EditMacros.description=Configure existing macros
 action.ValidateXml.text=_Validate
-action.ValidateXml.description=Validate the current xml file
-action.GenerateDTD.text=Generate DTD from _XML file
+action.ValidateXml.description=Validate the current XML file
+action.GenerateDTD.text=Generate DTD from _XML File
 group.ExternalToolsGroup.text=External Tools
 action.PsiViewer.text=_View PSI Structure...
 action.PsiViewerForContext.text=View PSI Structure of Cu_rrent File...
